--- a/src/Multirotor+pinpoint_correct-3_coment.ipynb
+++ b/src/Multirotor+pinpoint_correct-3_coment.ipynb
@@ -2,58 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 600x600 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "location:\n",
-      " [[ 0.25  2.5   0.  ]\n",
-      " [ 0.25  1.5   0.  ]\n",
-      " [ 0.25 -1.5   0.  ]\n",
-      " [ 0.25 -2.5   0.  ]\n",
-      " [-0.75 -2.5   0.  ]\n",
-      " [-0.75 -1.5   0.  ]\n",
-      " [-0.75  1.5   0.  ]\n",
-      " [-0.75  2.5   0.  ]]\n",
-      "moments:\n",
-      " [[-2.75   0.275  0.   ]\n",
-      " [-1.65   0.275  0.   ]\n",
-      " [ 1.65   0.275  0.   ]\n",
-      " [ 2.75   0.275  0.   ]\n",
-      " [ 2.75  -0.825  0.   ]\n",
-      " [ 1.65  -0.825  0.   ]\n",
-      " [-1.65  -0.825 -0.   ]\n",
-      " [-2.75  -0.825 -0.   ]]\n",
-      "A:\n",
-      " [[ 1.1    1.1    1.1    1.1    1.1    1.1    1.1    1.1  ]\n",
-      " [-2.75  -1.65   1.65   2.75   2.75   1.65  -1.65  -2.75 ]\n",
-      " [ 0.275  0.275  0.275  0.275 -0.825 -0.825 -0.825 -0.825]\n",
-      " [-0.52   0.52  -0.52   0.52  -0.52   0.52  -0.52   0.52 ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import math\n",
     "import copy\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import cvxpy as cp\n",
-    "import copy\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
     "from matplotlib.ticker import LinearLocator, FormatStrFormatter\n",
@@ -1475,7 +1434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.9-final"
   }
  },
  "nbformat": 4,
