edit desire function name

--- a/src/Multirotor+pinpoint_correct-3_coment.ipynb
+++ b/src/Multirotor+pinpoint_correct-3_coment.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "def attitude_angle(init_pos,init_vel,target_landing_point):\n",
+    "def compute_attitude_angle(init_pos,init_vel,target_landing_point):\n",
     "    pos_x = init_pos[0]\n",
     "    pos_y = init_pos[1]\n",
     "    pos_z = init_pos[2]\n",
