--- a/src/Multirotor+pinpoint_correct-3_coment.ipynb
+++ b/src/Multirotor+pinpoint_correct-3_coment.ipynb
@@ -27,8 +27,11 @@
     "    target_y = target_landing_pointp[1] #desire_landing point\n",
     "    target_z = target_landing_pointp[2] #maybe 0?\n",
     "\n",
-    "    roll, pitch,yaw = compute_guidance()\n",
+    "    #####################computing stage######################\n",
     "\n",
+    "    roll, pitch,yaw = compute_guidance()\n",
+    "    \n",
+    "    ##########################################################\n",
     "    return roll,pitch,yaw"
    ]
   },
