--- a/src/Multirotor+pinpoint_correct-3_coment.ipynb
+++ b/src/Multirotor+pinpoint_correct-3_coment.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "    #####################computing stage######################\n",
     "\n",
-    "    roll, pitch,yaw = compute_guidance()\n",
+    "    roll, pitch, yaw, thrust = compute_guidance()\n",
     "    \n",
     "    ##########################################################\n",
     "    return roll,pitch,yaw"
